<resources>
    <string name="app_name">Sudut Negeri</string>

    //About Us
    <string name="name1">Dwi Yulianto</string>
    <string name="ket_about">Sudut adalah objek yang memerlukan fasilitas edukasi, sedangkan Negeri adalah objek yang akan memberikan fasilitas edukasi. Start-up Sudut Negeri berfokus pada bidang social-education demi pemerataan kualitas pendidikan Indonesia yang suistanable \n</string>
    <string name="pos1">Founder</string>
    <string name="name2">Aufal Marom</string>
    <string name="pos2">Founder</string>
    <string name="name3">Raisya Nasution</string>
    <string name="pos3">Founder</string>
    <string name="name4">Mukhlis A. A.</string>
    <string name="pos4">Founder</string>
    <string name="name5">Verana K. S.</string>
    <string name="pos5">Founder</string>
    <string name="name6">Pramudya Erviansyah</string>
    <string name="pos6">Chief Technology Officer</string>
    <string name="name7">Bima Fajar S.</string>
    <string name="pos7">UI/UX Developer</string>
    <string name="name8">Difka Satria A.</string>
    <string name="pos8">Back-End Developer</string>
    <string name="name9">Amri Luthfi</string>
    <string name="pos9">Full-Stack Web Developer</string>
    <string name="sn">Sudut Negeri</string>
    <string name="tentangsn">Platform kebaikan yang mempertemukan antara Sudut dan Negeri.</string>
    <string name="taglinesn"></string>

    //Navigation drawer
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_profil">Profil</string>
    <string name="navigation_about">Tentang Kami</string>
    <string name="navigation_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
