<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_beranda"
            android:title="@string/navigation_dashboard" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_profil"
            android:title="@string/navigation_profil" />
        <item
            android:id="@+id/navigation4"
            android:icon="@drawable/ic_about"
            android:checked="false"
            android:title="@string/navigation_about" />
        <item
            android:id="@+id/navigation5"
            android:checked="false"
            android:icon="@drawable/ic_setting"
            android:title="@string/navigation_logout" />
    </group>




</menu>