<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <RelativeLayout
        android:id="@+id/rlAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/animation_bg">

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="140dp"
            android:text="@string/ket_about"
            android:textAlignment="center"
            android:textColor="#FEFEFE"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logo_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/sn"
                    android:textColor="#FEFEEF"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/taglinesn"
                    android:textColor="#FEFEFE"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Team"
                android:textAlignment="center"
                android:textColor="#FEFEFE"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name1"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos1"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name2"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos2"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name3"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos3"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name4"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos4"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name5"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos5"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name6"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos6"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name7"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos7"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name8"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos8"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#FEFEFE"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name9"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pos9"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="270dp"
            android:src="@drawable/founder" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="390dp"
            android:src="@drawable/founder" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="510dp"
            android:src="@drawable/founderh" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="630dp"
            android:src="@drawable/foundermu" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="750dp"
            android:src="@drawable/founderver" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="880dp"
            android:src="@drawable/cto" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="1010dp"
            android:src="@drawable/frontend" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="1140dp"
            android:src="@drawable/backend" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="1280dp"
            android:src="@drawable/fullstack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1410dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="2018 Copyright @ Sudut Negeri"
                android:textAlignment="center"
                android:textColor="#FEFEFE"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
